[package]
name = "revm-sgx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
ethers = "2.0.9"
ethers-contract = "2.0.9"
ethers-core = "2.0.9"
ethers-providers = "2.0.9"
hex = "0.4.3"
revm = { version = "3.3.0", features = ["ethersdb", "std", "serde"] }
tokio = {"version"= "1.32.0", features=["full"] }
reth-primitives = { version = "0.1.0-alpha.8", git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }

